(1) Add kcors package: For testing the API in swagger editor, the server need the ability of cross-origin resource sharing (CORS). (2) Modify popup component: propTypes and clean some code. (3) Fixed the signin issue: The original approach have some problem in deal with password verification, just fixed it :( (4) Add new specification in swagger: Finished signin and forgot-password router API spec, and the server API have been verified again.
