# api-spec.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "title": "Meet API",
-        "description": "Move your app forward with the Meet API\n\n## API Success Code\n\nCode  | HTTP Code | Message\n----- | --------- | --------\n200001 | 200 | You can go to check your email\n\n\n## API Error Code\n\nError Code  | HTTP Code | Message\n------| --- | -----------------------------------\n401001 | 401 | Email or password is not valid\n401002 | 401 | Token is not valid or expired\n401003 | 401 | Email token is not valid or expired\n403001 | 403 | The email has already been registered in social account\n403002 | 403 | The email has already been registered\n422001 | 422 | Length of password must >= 6\n500001 | 500 | Bcrypt error\n500002 | 500 | Your data is bad and you should feel bad\n503001 | 503 | SMTP server unavailable to verify\n503002 | 503 | SMTP server unavailable to send\n",
+        "description": "Move your app forward with the Meet API\n\n## API Success Code\n\nCode  | HTTP Code | Message\n----- | --------- | --------\n200001 | 200 | You can go to check your email\n200002 | 200 | Account validation success\n200003 | 200 | Signin success\n\n\n## API Error Code - 400\n\nError Code  | HTTP Code | Message\n------| --- | -----------------------------------\n401001 | 401 | Email or password is not valid\n401002 | 401 | Token is not valid or expired\n401003 | 401 | Email token is not valid or expired\n403001 | 403 | The email has already been registered in social account\n403002 | 403 | The email has already been registered\n404001 | 404 | Your email account is not activated\n404002 | 404 | We could not find your account\n422001 | 422 | Length of password must >= 6\n\n## API Error Code - 500\n\nError Code  | HTTP Code | Message\n------| --- | -----------------------------------    \n500001 | 500 | Bcrypt error\n500002 | 500 | Your data is bad and you should feel bad\n503001 | 503 | SMTP server unavailable to verify\n503002 | 503 | SMTP server unavailable to send\n",
         "version": "1.0.0"
     },
     "host": "localhost:3000",
@@ -37,7 +37,7 @@
                     "200": {
                         "description": "Success Response",
                         "schema": {
-                            "$ref": "#/definitions/SignupResponse"
+                            "$ref": "#/definitions/SuccessResponse"
                         }
                     },
                     "default": {
@@ -64,11 +64,73 @@
                     "200": {
                         "description": "Success response",
                         "schema": {
-                            "$ref": "#/definitions/SignupResponse"
+                            "$ref": "#/definitions/GetUserProfileResponse"
                         }
                     },
                     "default": {
                         "description": "Error response",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/signin": {
+            "post": {
+                "summary": "Signin the system",
+                "description": "Signin the system",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "User email and password",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Signin"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/GetUserProfileResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "Error Response",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/forgot_password": {
+            "post": {
+                "summary": "Recover password",
+                "description": "The machanism for user to recover his password",
+                "parameters": [
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "email",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/forgot_password"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success Response",
+                        "schema": {
+                            "$ref": "#/definitions/SuccessResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "Error Response",
                         "schema": {
                             "$ref": "#/definitions/ErrorResponse"
                         }
@@ -85,17 +147,20 @@
                     "type": "string"
                 },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "email"
                 },
                 "password": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "password"
                 },
                 "avatar": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "byte"
                 }
             }
         },
-        "SignupResponse": {
+        "SuccessResponse": {
             "type": "object",
             "properties": {
                 "status": {
@@ -106,6 +171,76 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "Signin": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "format": "email"
+                },
+                "password": {
+                    "type": "string",
+                    "format": "password"
+                }
+            }
+        },
+        "Auth": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string",
+                    "format": "email"
+                },
+                "avatar": {
+                    "type": "string",
+                    "format": "byte"
+                },
+                "edit_nickname_time": {
+                    "type": "string",
+                    "format": "date"
+                },
+                "created_time": {
+                    "type": "string",
+                    "format": "date"
+                }
+            }
+        },
+        "GetUserProfileResponse": {
+            "type": "object",
+            "properties": {
+                "status": {
+                    "type": "string"
+                },
+                "code": {
+                    "type": "integer"
+                },
+                "auth": {
+                    "$ref": "#/definitions/Auth"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "forgot_password": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "format": "email"
                 }
             }
         },
